welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:1: error: '=' expected but ';' found.
var nbPas;Int=0
         ^Program:2: error: '=' expected but ';' found.
var cpt;Int=0
       ^Program:8: error: '<-' expected but ';' found.
for(cpt;1 to nbPas){
       ^Program:8: error: '<-' expected but ')' found.
for(cpt;1 to nbPas){
                  ^Program:13: error: illegal start of simple expression
	}
        ^