welcome.lessons.welcome.loopfor.LoopFor.scala.code
var nbPas;Int=0
var cpt;Int=0
while(!estSurBiscuit()){
  avance()
  nbPas=nbPas+1
}
prendBiscuit()
for(cpt;1 to nbPas){
  avance()
}
poseBiscuit()